[package]
name = "kvs"
version = "0.1.0"
authors = ["lighk <daoshiobushi@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = "2.33.3"
structopt = "0.3.21"
failure = "0.1.8"
serde = "1.0.124"
serde_json = "1.0.64"
log="0.4.14"
env_logger = "0.8.3"
sled = "0.34.6"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3.4"
predicates = "1.0.0"
rand = "0.8.3"
tempfile = "3.0.7"
walkdir = "2.2.7"
crossbeam-utils = "0.6.5"

[[bench]]
name = "benches"
harness = false